pushing projection changes.  still not working but made good progress.

--- a/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
+++ b/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
@@ -98,18 +98,17 @@
     <Compile Include="Caching\ICache.cs" />
     <Compile Include="Caching\LazyCache.cs" />
     <Compile Include="Caching\ReflectionCache.cs" />
-    <Compile Include="Commanding\AggregateRootCommand.cs" />
-    <Compile Include="Commanding\AggregateRootCommandHandlingResult.cs" />
+    <Compile Include="Commanding\Domain\AggregateRootCommand.cs" />
+    <Compile Include="Commanding\Domain\AggregateRootCommandHandlingResult.cs" />
     <Compile Include="Commanding\CodeContract\CommandContract.cs" />
     <Compile Include="Commanding\CommandHandlingResult.cs" />
     <Compile Include="Commanding\ICommandHandlingResult.cs" />
     <Compile Include="Commanding\StaticCommandEntry.cs" />
-    <Compile Include="Commanding\SynchronizedAggregateRootCommandHandler.cs" />
-    <Compile Include="Commanding\CodeContract\RepositoryContract.cs" />
-    <Compile Include="Commanding\IAggregateRootCommand.cs" />
-    <Compile Include="Commanding\IRepository.cs" />
-    <Compile Include="Commanding\AggregateRootCommandHandler.cs" />
-    <Compile Include="Commanding\TransactionIdentity.cs" />
+    <Compile Include="Commanding\Domain\SynchronizedAggregateRootCommandHandler.cs" />
+    <Compile Include="Commanding\Domain\CodeContract\RepositoryContract.cs" />
+    <Compile Include="Commanding\Domain\IAggregateRootCommand.cs" />
+    <Compile Include="Commanding\Domain\IRepository.cs" />
+    <Compile Include="Commanding\Domain\AggregateRootCommandHandler.cs" />
     <Compile Include="Domain\AggregateRootBuilder.cs" />
     <Compile Include="Domain\AggregateRootIdentity.cs" />
     <Compile Include="Domain\AggregateRootState.cs" />
@@ -210,11 +209,31 @@
     <Compile Include="Messaging\IMessageHandler`1.cs" />
     <Compile Include="Messaging\Message.cs" />
     <Compile Include="Persistence\AggregateRootConcurrencyException.cs" />
+    <Compile Include="Projecting\CodeContract\ProjectionCatalogContract.cs" />
+    <Compile Include="Projecting\CodeContract\ProjectionContract.cs" />
+    <Compile Include="Projecting\CodeContract\ProjectionEntryContract.cs" />
+    <Compile Include="Projecting\CodeContract\ProjectionFactoryContract.cs" />
+    <Compile Include="Projecting\CodeContract\ProjectionManagerContract.cs" />
+    <Compile Include="Projecting\CodeContract\ProjectionManagerFactoryContract.cs" />
+    <Compile Include="Projecting\IProjection.cs" />
+    <Compile Include="Projecting\IProjectionFactory.cs" />
+    <Compile Include="Projecting\IProjectionManagerFactory.cs" />
+    <Compile Include="Projecting\MemoryProjectionFactory.cs" />
+    <Compile Include="Projecting\ProjectionFactory.cs" />
+    <Compile Include="Projecting\ProjectionQueueItem.cs" />
     <Compile Include="Projecting\IProject.cs" />
+    <Compile Include="Projecting\IProjectionCatalog.cs" />
+    <Compile Include="Projecting\IProjectionEntry.cs" />
+    <Compile Include="Projecting\IProjectionManager.cs" />
     <Compile Include="Projecting\MemoryProjectionManager.cs" />
     <Compile Include="Projecting\Projection.cs" />
+    <Compile Include="Projecting\ProjectionCatalog.cs" />
+    <Compile Include="Projecting\ProjectionDomainEventDispatcher.cs" />
+    <Compile Include="Projecting\ProjectionEntry.cs" />
     <Compile Include="Projecting\ProjectionIdentity.cs" />
     <Compile Include="Projecting\ProjectionManager.cs" />
+    <Compile Include="Projecting\ProjectionManagerFactory.cs" />
+    <Compile Include="Projecting\StaticProjectionEntry.cs" />
     <Compile Include="Properties\GlobalSuppressions.cs" />
     <Compile Include="Helper\BooleanHelper.cs" />
     <Compile Include="Helper\DictionaryHelper.cs" />
