Revert "remove ICommandHandlingResult"
This reverts commit 26cc0ff46cb9eb3689be18d98c52c96531ecd936.

--- a/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
+++ b/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
@@ -86,6 +86,7 @@
     <Compile Include="DefaultTypeFactory.cs" />
     <Compile Include="DomainEventRevision.cs" />
     <Compile Include="EventProviderIdentity.cs" />
+    <Compile Include="EventStoreCommandHandlingResult.cs" />
     <Compile Include="EventStoreDomainEventDispatcher.cs" />
     <Compile Include="EventStoreProjectionDispatcher.cs" />
     <Compile Include="EventStoreRepository.cs" />
